2005-03-29  Adam Jocksch  <ajocksch@redhat.com>

	* Gui.java (initializePreferences): Added template preference.
	* glade/frysk_source_prefs.glade: Added template syntax highlighting
	widgets.

2006-03-29  Phil Muldoon  <pmuldoon@redhat.com>

	* druid/CreateFryskSessionDruid.java: Added listeners for
	process selection. 
	* druid/AddedProcTreeView.java: Added.

	* druid/CreateFryskSessionDruid.java: Update glade
	widget handles to reflect session glade refactor.
	* glade/frysk_create_sesison_druid.glade: Refactor
	controls to follow (Window)_(Control) naming convention.
	Rename some controls to be more context specific.

2006-03-28  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/frysk_create_session_druid.glade: Added as an
	extraction from procpop.glade
	* glade/procpop.glade: Removed Session Druid.

	* Gui.java (Gui): Added source lookup for 
	seperate session glade. Need to refactor this
	into a seperate glade manager.
	
	* druid: Added namespace
	* StartDebugSession.java: Deleted.
	* druid/CreateFryskSessionDruid.java: Added and
	refactored from above.


2006-03-28  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestObserverSaveLoad.java: Added test of copying filters
	and actions inside of {action/filter}Points.

2006-03-27  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added spacing to filtersTable.

3006-03-27  Adam Jocksch  <ajocksch@redhat.com>

	* Gui.java (initializePreferences): Initializes macro preference.
	* glade/frysk_source.glade: Added widgets for macro syntax highlighting.

	* Gui.java (initializePreferences): Initializes preferences for namespace and
	include statement syntax highlighting.
	* glade/frysk_source.glade: Added widgets for namespace and include statment
	syntax highlighting.

2006-03-24  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source.glade: Removed widgets for stack and variable watches,
	also added labels to frames for stakc and variable watches.

2006-03-14  Adam Jocksch  <ajocksch@redhat.com>
